# kurumi-bot

./: .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  config.toml
assets/: config.toml
docs/: how it works (in depth).md  info.md
docs/commands/: timer.md
docs/commands/user/: neko.md  rank.md
docs/commands/utilities/: configure.md
service/: kurumi_bot_service.plist  kurumi_bot_service.service  kurumi_bot_service.sh
src/: download_docs.rs  main.rs  rich_presence.rs  secrets.rs
src/backend_api/: actix_main.rs  mod.rs
src/cli/: mod.rs  setup.rs
src/commands/: help.rs  info.rs  mod.rs  rps.rs  timer.rs  utils.rs
src/commands/components/: duration_timer.rs  mod.rs
src/commands/moderation/: ban.rs  kick.rs  mod.rs  mute.rs  punishment.rs
src/commands/user/: avatar.rs  hug.rs  image_to_ascii.rs  mod.rs  neko_commands.rs  rank.rs  snipe.rs
src/commands/user/avatar/: avatar.rs  gpu_init.rs  grayscale.rs  invert.rs  mod.rs  sepia.rs
src/commands/user/avatar/shaders/: invert.wgsl  sepia.wgsl
src/commands/user/math/: math.rs  mod.rs  square_roots.rs
src/commands/user/neko/: baka.rs  cuddle.rs  hug.rs  kiss.rs  meow.rs  mod.rs  pat.rs  slap.rs
src/commands/utilities/: authorize.rs  configure.rs  mod.rs
src/conf/: config.rs  utils.rs
src/crates/image_to_ascii/: .gitignore  Cargo.toml
src/crates/image_to_ascii/js_src/: index.js  package-lock.json  package.json
src/crates/image_to_ascii/src/: lib.rs
src/db/: configuration.rs  guild_list.rs  mod.rs  timer.rs
src/db/moderation/: logs.rs  mod.rs  muted.rs
src/db/user/: mod.rs  xp.rs
src/events/: mod.rs  moderation.rs  timer.rs
src/handler/: guilds.rs  member_join.rs  message_logging.rs  messages_reactions.rs  mod.rs  xp_handler.rs
src/utils/: env.rs  mod.rs  path.rs  sudo.rs  system_usage.rs
