[package]
name = "cerebro"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
poise = "0.5.5"
shuttle-poise = "0.35.2"
shuttle-runtime = "0.35.2"
shuttle-secrets = "0.35.2"
tracing = "0.1.37"
tokio = "1.28.2"
rusqlite = { version =  "0.31.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
chrono = "0.4.34"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8.10"
serde_json = "1.0.114"
systemstat = "0.2.3"
rustc_version = "0.4.0"
fastrand = "2.0.1"
