[package]
name = "kurumi-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
poise = "0.6.1"
tracing = "0.1.37"
tokio = { version="1.28.2", features=["full"] }
chrono = "0.4.34"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8.10"
serde_json = "1.0.114"
systemstat = "0.2.3"
rustc_version = "0.4.0"
fastrand = "2.0.1"
discord-presence = "1.0.0"
env_logger = "0.11.3"
regex = "1.10.3"
actix-web = "4.5.1"
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"]}
serde = "1.0.197"
os_info = "3.8.2"
image = "0.24.0"

[dependencies.nekoslife]
version = "0.2.1"

# disable nsfw
default-features = false
features = ["default-tls", "sfw"]

