[package]
name = "kurumi-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
poise = "0.6.1"
tracing = "0.1.37"
tokio = { version = "1.28.2", features = ["full"] }
chrono = "0.4.34"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8.10"
serde_json = "1.0.114"
systemstat = "0.2.3"
rustc_version = "0.4.0"
fastrand = "2.0.1"
discord-presence = "1.0.0"
env_logger = "0.11.3"
regex = "1.10.3"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
os_info = "3.8.2"
image = "0.24.0"
bytemuck = "1.9"
pollster = "0.2"
wgpu = "0.14"
lazy_static = "1.4.0"
log = "0.4.21"
rayon = "1.10.0"
crossbeam = "0.8.4"
once_cell = "1.19.0"
camino = "1.1.7"
fs_extra = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
walkdir = "2.5.0"
compact_str = "0.7.1"
etcetera = "0.8.0"
dirs = "5.0.1"
which = "6.0.1"
dunce = "1.0.4"
num_threads = "0.1.7"
ash = "0.38.0"
rustls = "0.23.6"
uuid = "1.8.0"
sea-query = "0.30.7"
config = "0.14.0"
rust-embed = "8.4.0"
nix = "0.28.0"
libc = "0.2.155"
procfs = "0.16.0"
rquickjs = "0.6.2"
docker-api = "0.14.0"

[target.'cfg(windows)'.dependencies]
tasklist = "0.2.13"


[dependencies.nekoslife]
version = "0.2.1"

# disable nsfw
default-features = false
features = ["default-tls", "sfw"]
